--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,16 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!-- Profile Info -->
+    <string name="status_available">Available</string>
+    <string name="status_busy">Busy</string>
+    <string name="status_happy">Happy</string>
+    <string name="status_sad">Sad</string>
+    <string name="status_dead">Dead</string>
+    <string name="gallery_chooser">Profile Picture</string>
+    <string name="save_btn">Save &amp; Exit</string>
+
+
     <!-- My Contacts Class -->
     <string name="dialog_friend_select_action">Actions</string>
     <string name="dialog_chat_select_action">Chat Actions</string>
