Added splash screen, updated chat message area

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="save_btn">Save &amp; Exit</string>
 
 
+    <!-- Chat Activity -->
+    <string name="enter_message">Type your message...</string>
+    <string name="content_desc_send">Send</string>
+    <string name="content_desc_media">Media</string>
+
+
     <!-- My Contacts Class -->
     <string name="dialog_friend_select_action">Actions</string>
     <string name="dialog_chat_select_action">Chat Actions</string>
@@ -26,6 +32,8 @@
     <string name="dialog_op4">Delete Chat</string>
     <string name="simple_date">dd/MM/yyyy</string>
 
+    <!-- Main Activity -->
+    <string name="wait">Please wait...</string>
 
     <string name="add_contact">Add</string>
     <string name="cancel_contact">Cancel</string>
