Adding feature to download uploaded pictures from firebase storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,6 @@
     <string name="username">Username</string>
     <string name="title_activity_first">FirstActivity</string>
 
+    <string name="media_message">Picture</string>
+
 </resources>
