--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,9 @@
 
     <string name="media_message">Picture</string>
 
+    <!-- Notification Activity -->
+    <string name="empty_notification">No pending Notification</string>
+
     <string name="invitation_message">Hey, want to join me for a chat.</string>
 
     <string name="short_text">Hello</string>
