--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="media_message">Picture</string>
 
     <!-- Notification Activity -->
-    <string name="empty_notification">No pending Notification</string>
+    <string name="empty_notification">No Pending Notification</string>
 
     <string name="invitation_message">Hey, want to join me for a chat.</string>
 
