--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="dialog_op2">Chat</string>
     <string name="dialog_op3">Delete Contact</string>
 
+    <string name="contact_active">Active</string>
+    <string name="contact_inactive">Inactive</string>
+
     <!-- Session fragment -->
     <string name="dialog_op4">Delete Chat</string>
     <string name="simple_date">dd/MM/yyyy</string>
