GroupSessionFragment delete needs testing thoroughly, more progress on GroupDetailActivity and other minor fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
     <string name="short_text">Hello</string>
     <string name="long_text">MAC Address - The physical address of the WAN port, as seen from the Internet. IP Address - The current WAN (Internet) IP Address. This field will be blank or 0.0.0.0 if the IP Address is assigned dynamically and there is no connection to Internet.</string>
 
+    <!-- GroupDetail Activity -->
+    <string name="no_admin">No Admin Found</string>
+
 </resources>
