--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,7 @@
     <string name="pref_header_general">General</string>
     <string name="pref_header_about">About</string>
 
+    <string name="boolean_true">true</string>
+    <string name="boolean_false">false</string>
+
 </resources>
