--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="title_login">Login</string>
     <string name="title_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_select_member">Select Members</string>
 
     <!-- Strings related to Settings -->
     <string name="pref_header_account">Account</string>
