--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="chat_gallery_chooser">Upload Picture</string>
     <string name="group_gallery_chooser">Group Picture</string>
     <string name="save_btn">Save &amp; Exit</string>
+    <string name="profile_hint">Enter profile Name...</string>
 
 
     <!-- Chat Activity -->
@@ -135,5 +136,9 @@
     <string name="naziur_description">I am the co-developer of the Android Chat android application. My key contribution to the application involves designing layouts and writing logic for managing connections with the various open-source APIs.</string>
     <string name="hamidur_description">Co-developer of Android Chat and involved in designing the various layout features as well as utilising the different web APIs. I am particularly interested in APIs and their use in producing high-quality dynamic content.</string>
 
+
+    <!-- TEXT LENGTH -->
+    <string name="profile_name_text">15</string>
+    <string name="username_text">10</string>
 
 </resources>
