able to see unread messages + access contact from single session

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="group_gallery_chooser">Group Picture</string>
     <string name="save_btn">Save &amp; Exit</string>
     <string name="profile_hint">Enter profile Name...</string>
+    <string name="profile_group_admin">Admin</string>
 
 
     <!-- Chat Activity -->
