--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
 
     <!-- LOGIN -->
     <string name="forgot_username"><u>Forgot Username?</u></string>
+    <string name="register">Create a account</string>
 
     <!-- Notification Activity -->
     <string name="empty_text">Nothing Found...</string>
@@ -118,6 +119,9 @@
     <string name="key_delete_acc">delete_acc</string>
     <string name="pref_desc_delete_acc">Warning: this action cannot be undone.</string>
     <string name="pref_title_delete_acc">Delete Account</string>
+
+    <string name="key_email">user_auth</string>
+    <string name="pref_title_auth">Account Email</string>
 
     <!-- About Settings Keys -->
     <string name="about_category_title">About</string>
