--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="title_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_select_member">Select Members</string>
+    <string name="title_block_list">Block List</string>
 
     <!-- Strings related to Settings -->
     <string name="pref_header_account">Account</string>
@@ -148,9 +149,14 @@
     <string name="naziur_description">I am the co-developer of the Android Chat android application. My key contribution to the application involves designing layouts and writing logic for managing connections with the various open-source APIs.</string>
     <string name="hamidur_description">Co-developer of Android Chat and involved in designing the various layout features as well as utilising the different web APIs. I am particularly interested in APIs and their use in producing high-quality dynamic content.</string>
 
-    <string name="group_name_text">25</string>
+    <!-- OTHER -->
+    <string name="block_list_msg_block_them">This user is already blocked</string>
+    <string name="block_list_msg_blocked_by_them">You may have been blocked by this user</string>
+    <string name="online_status_offline">Offline</string>
+    <string name="online_status_online">Online</string>
 
     <!-- TEXT LENGTH -->
+    <string name="group_name_text">25</string>
     <string name="profile_name_text">15</string>
     <string name="username_text">10</string>
 
