--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <!-- Session fragment -->
     <string name="dialog_op4">Delete Chat</string>
     <string name="simple_date">dd/MM/yyyy</string>
+    <string name="fragment_empty_chat">No Chats Found</string>
 
     <!-- Group Session Fragmnet-->
     <string name="dialog_op5">Group Detail</string>
